@@ -66,7 +66,7 @@
 
 
 
-This file was last updated on: March &nbsp;3rd, 2007
+This file was last updated on: April &nbsp;15th, 2007
 <p><a href="#License">License</a></p>
 
 
@@ -862,7 +862,7 @@ New</h2>
 
 
 
-<h3><b>v1.2beta3</b> <b>- ?, 2007</b></h3>
+<h3><b>v1.2beta3</b> <b>- April 15th, 2007</b></h3>
 
 
 
