@@ -1,5 +1,5 @@
 #
-# SNMPTT v1.2beta2 Configuration File
+# SNMPTT v1.2beta3 Configuration File
 #
 # Windows NT
 #
